--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ export = [
     "torch>=2.0.0",
     "torchvision>=0.15.0",
     "transformers>=4.36.0",
+    "optimum[onnxruntime]>=1.17.0",
     "gdown>=5.0.0",
     "numpy>=1.24.0",
 ]
